--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 <form class="subscribe">
                     <p class="subscribe-form">
                         <label for="email"></label>
-                        <input type="email" placeholder="E-mail">
+                        <input class="form-input" type="email" placeholder="E-mail">
                     </p>
                     
                     <button type="submit" class="subscribe-btn btn">Подписаться</button>
