--- a/index.html
+++ b/index.html
@@ -454,8 +454,8 @@
             <textarea class="comment" name="comment" placeholder="Введите текст"></textarea>
             </label>                  
         
-            <input type="checkbox" id="user-policy" name="user-policy" value="accept-policy" class="check-form-policy">
-            <label for="user-policy" class="check-form-policy-text">Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
+            <input type="checkbox" id="user-policy" name="user-policy" value="accept-policy" class="check-form-policy visually-hidden">
+            <label for="user-policy" class="check-form-policy-text">&nbsp;&nbsp;Соглашаюсь с рассылкой и принимаю&nbsp;<a href="">Условия договора</a>
             </label>
                 
                 <button class="modal-form-btn btn" type="submit">Отправить</button>
