--- a/portfolio.html
+++ b/portfolio.html
@@ -232,10 +232,10 @@
                         <p class="adress-place">г. Киев, пр-т Леси Украинки, 26</p>
                     </li>
                     <li class="address-item">
-                        <a href="mailto:info@devstudio.com" class="adress-info link">info@devstudio.com</a>
+                        <a href="mailto:info@devstudio.com" class="adress-info">info@devstudio.com</a>
                     </li>
                     <li class="address-item">
-                        <a href="tel:+380961111111" class="adress-info link">+38 096 111 11 11</a>
+                        <a href="tel:+380961111111" class="adress-info">+38 096 111 11 11</a>
                     </li>
                 </ul>
             </address>
@@ -272,6 +272,17 @@
                     </a>
                 </li>
             </ul>
+        </div>
+        <div class="footer-right-side">
+            <b class="uppertitle">Подпишитесь на рассылку</b>
+            <form class="subscribe">
+                <p class="subscribe-form">
+                    <label for="email"></label>
+                    <input class="form-input" type="email" placeholder="E-mail">
+                </p>
+
+                <button type="submit" class="subscribe-btn btn">Подписаться</button>
+            </form>
         </div>
     </div>
 </footer>
