--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             <form class="modal-form">
                 <label class="form-label">Имя
                     <span class="modal-form-input-wrapper">
-                        <input type="text" class="modal-form-input">
+                        <input type="text" class="modal-form-input" name="name">
                         <svg class="modal-form-icon" width="18" height="18">
                             <use href="./images/sprite.svg#person-icon"></use>
                         </svg>
@@ -434,7 +434,7 @@
         
             <label class="form-label">Телефон
                 <span class="modal-form-input-wrapper">
-                    <input type="tel" class="modal-form-input">
+                    <input type="tel" class="modal-form-input" name="tel">
                     <svg class="modal-form-icon" width="18" height="18">
                         <use href="./images/sprite.svg#phone-black-icon"></use>
                     </svg>
@@ -442,7 +442,7 @@
             </label>
             <label class="form-label">Почта
                 <span class="modal-form-input-wrapper">
-                    <input type="email" class="modal-form-input">
+                    <input type="email" class="modal-form-input" name="email">
                     <svg class="modal-form-icon" width="18" height="18">
                         <use href="./images/sprite.svg#email-black-icon"></use>
                     </svg>
