Добавлен фокус и маржин
Добавлен фокус на инпуты и маржин на ::before чекбокса вместо мнемонических пробелов

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
             </label>                  
         
             <input type="checkbox" id="user-policy" name="user-policy" value="accept-policy" class="check-form-policy visually-hidden">
-            <label for="user-policy" class="check-form-policy-text">&nbsp;&nbsp;Соглашаюсь с рассылкой и принимаю&nbsp;<a href="">Условия договора</a>
+            <label for="user-policy" class="check-form-policy-text">Соглашаюсь с рассылкой и принимаю&nbsp;<a href="">Условия договора</a>
             </label>
                 
                 <button class="modal-form-btn btn" type="submit">Отправить</button>
